auth_service/k8s/auth_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: kanishk2207/go_auth_service:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
