auth_service/k8s/auth_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: default
  annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: go-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-app-service 
            port:
              number: 8080
